force-app/main/default/objects/Quota_Line__c/Quota_Line__c.object-meta.xml
<CustomObject>
    <label>Quota Line</label>
    <nameField>
        <displayFormat>QL-{000000}</displayFormat>
        <label>Quota Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>