force-app/main/default/objects/Quota_Line__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF(Opportunity_Amount__c &gt;0, Opportunity_Amount__c, IF(Order_Amount__c &gt;0, Order_Amount__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>