force-app/main/default/objects/Quota_Line__c/fields/Amount_YTD__c.field-meta.xml
<CustomField>
    <fullName>Amount_YTD__c</fullName>
    <label>Amount YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>