force-app/main/default/objects/Quota_Line__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Revenue in backlog</fullName>
            </value>
            <value>
                <fullName>Expected revenue &gt;=20% chance</fullName>
            </value>
            <value>
                <fullName>Expected revenue &lt;20% chance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>