force-app/main/default/objects/Quota_Line__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <label>Quota</label>
    <referenceTo>Quota__c</referenceTo>
    <relationshipLabel>Quota Lines</relationshipLabel>
    <relationshipName>Quota_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>