force-app/main/default/objects/Quota_Line__c/fields/Quota_Account__c.field-meta.xml
<CustomField>
    <fullName>Quota_Account__c</fullName>
    <formula>Quota__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota - Account</label>
    <type>Text</type>
</CustomField>