force-app/main/default/objects/Quota_Line__c/fields/Quota_Date__c.field-meta.xml
<CustomField>
    <fullName>Quota_Date__c</fullName>
    <formula>Quota__r.Quota_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota - Date</label>
    <type>Date</type>
</CustomField>