force-app/main/default/objects/Quota_Line__c/fields/Quota_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Quota_Date_Month__c</fullName>
    <formula>MONTH(Quota__r.Quota_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota - Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>