force-app/main/default/objects/Quota_Line__c/fields/Quota_Line__c.field-meta.xml
<CustomField>
    <fullName>Quota_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Line</label>
    <referenceTo>Quota_Line__c</referenceTo>
    <relationshipLabel>Quota Lines</relationshipLabel>
    <relationshipName>Quota_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>