force-app/main/default/objects/Quota_Line__c/fields/Quota_PMC__c.field-meta.xml
<CustomField>
    <fullName>Quota_PMC__c</fullName>
    <formula>TEXT(Quota__r.PMC_Global_Quota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota - PMC</label>
    <type>Text</type>
</CustomField>