force-app/main/default/objects/Quota_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quota_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Amount_YTD__c</columns>
    <columns>Quota_Date_Month__c</columns>
    <columns>Quota_Account__c</columns>
    <columns>Quota_PMC__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quota_Date_Month__c</field>
        <operation>lessOrEqual</operation>
        <value>2</value>
    </filters>
    <label>All</label>
</ListView>